--- a/templates/base.html
+++ b/templates/base.html
@@ -10,15 +10,12 @@
     <meta name="author" content="Shinichi Okada">
 
     <title>{% block title %}{% endblock %} FastAPI Starter</title>
-    <link rel="icon" href="{{ url_for('static', path='/images/favicon.png') }}" sizes="32x32" />
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <!-- Custom CSS -->
-    <link href="{{ url_for('static', path='/css/style3.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', path='/css/mystyle.css') }}" rel="stylesheet">
-    <!-- Your Font Awesome kit -->
+    <link href="/static/css/style3.css" rel="stylesheet">
+    <link href="/static/css/mystyle.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/543c4560e5.js" crossorigin="anonymous"></script>
 
     {% endblock %}
@@ -27,7 +24,6 @@
 <body>
     <div class="wrapper">
         {% include 'include/sidebar.html' %}
-        <!-- Page Content  -->
         <div id="content">
             {% include 'include/topnav.html' %}
             {% block page_content %}
@@ -39,15 +35,12 @@
     {% block scripts %}
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <!-- Popper.JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
         integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
         crossorigin="anonymous"></script>
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-    <!-- jQuery Custom Scroller CDN -->
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
     <script type="text/javascript">
