--- a/templates/include/sidebar.html
+++ b/templates/include/sidebar.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="sidebar-header">
-        <h3>FastAPI Web Starter</h3>
+        <h3>SHIFR project</h3>
     </div>
 
     <ul class="list-unstyled components">
